--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body {
 	top: 0;
 	right: 0;
 	width: 5px;
-	height: 100%;
+	height: 100vh;
 	cursor: ew-resize;
 	border: none;
 	background-color: transparent;
@@ -57,4 +57,35 @@ body {
 	background-color: #13120f;
 	color: white;
 	transition: width 0.3s;
+}
+
+.canvas-container {
+	background-color: #34343429;
+	width: 100vh;
+	height: 100vh;
+}
+
+.material-form {
+	background-color: #34343489;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	border-radius: 10px;
+	padding: 30px;
+	height: 100vh;
+}
+
+select {
+	width: 250px;
+	margin: 10px;
+	padding: 10px;
+	border-radius: 10px;
+}
+
+label {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	color: #e3c7ffe6;
 }
