--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/* Desktop Styles */
+
 body {
 }
 
@@ -73,9 +75,15 @@ body {
 	height: 150px;
 	margin: 10px;
 }
+/* .object-icon:hover .action-icon,
+.object-icon.highlighted .action-icon {
+	visibility: visible;
+} */
+
 .object-icon.highlighted {
 	box-shadow: #bc80f8e6 0px 0px 0px 1px;
 }
+
 .action-icons {
 	position: absolute;
 	bottom: 0;
@@ -85,6 +93,7 @@ body {
 }
 
 .action-icon {
+	/* visibility: hidden; */
 	background: none;
 	border: none;
 	cursor: pointer;
@@ -102,7 +111,6 @@ body {
 	display: flex;
 	background-color: #34343489;
 	color: white;
-	min-width: 950px;
 }
 
 .canvas-container {
@@ -117,13 +125,9 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding-right: 50px;
-	padding-left: 50px;
-	height: 500px;
+	padding: 2rem;
 	border-radius: 30px;
 	position: fixed;
-	right: 20px;
-	top: 20px;
 	z-index: 2;
 }
 
@@ -134,13 +138,40 @@ select {
 }
 
 label {
-	margin-top: 20px;
-}
-
-label {
+	margin-bottom: 15px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	color: #e3c7ffe6;
+}
+label select,
+label input {
+	margin-top: 5px;
+}
+
+/* Tablet Styles max-width: 768px */
+@media only screen and (max-width: 767px) {
+}
+/* Mobile Styles max-width: 480px */
+
+@media only screen and (min-width: 880px) {
+	.material-form {
+		top: 1rem;
+		right: 1rem;
+	}
+}
+
+@media only screen and (max-width: 879px) {
+	.canvas-container {
+		margin-top: -12rem;
+	}
+	.material-form {
+		padding: 1rem;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		border-radius: 0;
+		min-width: fit-content;
+	}
 }
