--- a/src/App.scss
+++ b/src/App.scss
@@ -72,6 +72,7 @@ button {
 	cursor: pointer;
 	transform: translate(+50%);
 	z-index: 4;
+	width: 32px;
 	height: 32px;
 	aspect-ratio: 1;
 	transition: background-color 0.1s;
